k8s/overlays/aws/frontend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: sentinel
spec:
  template:
    spec:
      containers:
        - name: frontend
